[package]
name = "nested_containment_list"
version = "0.1.0"
authors = ["Anders Evensen"]
description = ["A data structure for efficiently storing and querying nested intervals."]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Anders429/nested_containment_list"
exclude = [".travis.yml"]

[build-dependencies]
autocfg = "1.0.1"
