[package]
name = "nested_containment_list"
version = "0.1.1"
authors = ["Anders Evensen"]
description = "A data structure for efficiently storing and querying nested intervals."
readme = "README.md"
repository = "https://github.com/Anders429/nested_containment_list"
license = "MIT OR Apache-2.0"
keywords = ["nested", "containment", "list", "interval", "overlapping"]
categories = ["algorithms", "data-structures", "no-std", "science"]
build = "build.rs"
exclude = [".travis.yml"]

[build-dependencies]
autocfg = "1.0.1"
