[package]
name = "nested_containment_list"
version = "0.2.1"
authors = ["Anders Evensen"]
edition = "2018"
description = "A data structure for efficiently storing and querying nested intervals."
readme = "README.md"
repository = "https://github.com/Anders429/nested_containment_list"
license = "MIT OR Apache-2.0"
keywords = ["nested", "containment", "list", "interval", "overlapping"]
categories = ["algorithms", "data-structures", "no-std", "science"]
build = "build.rs"
exclude = [".github/*"]

[dependencies]
doc_item = {version = "0.1.1", optional = true}

[build-dependencies]
autocfg = "1.0.1"

[dev-dependencies]
claim = "0.5.0"
more_ranges = "0.1.0"

[features]
doc = ["doc_item"]
